css/aquaverse.css
:root {
  --logo-color: #003399;
  --heading-color: #006600;
  --headline-color: black;
  --subheadline-color: #555;
  --headline-background: #eee;
  --link-color: #3333cc;
  --active-content: black;
  --inactive-content: #777777;
}

h1, h2, h3, h4 {
  color: var(--heading-color);
}

.clickable {
  cursor: pointer;
}

.headline-container {
  margin-top: 14px;
  margin-bottom: 14px;
  padding-left: 25px;
  padding-right: 25px;
  border-radius: 5px;
  background: var(--headline-background);
}

.headline {
  color: var(--headline-color);
  font-weight: bold;
  text-align: left;
}
.sub-headline {
  color: var(--subheadline-color);
  font-weight: bold;
  text-align: left;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:visited {
  color: var(--link-color);
  text-decoration: none;
}

.aq {
  background: var(--logo-color);
  padding: 0px 5px 10px 9px;
  border-radius: 5px;
  border: 1pt solid #99f;
}

.logo-container {
  margin-top: 6px;
  position: absolute;
  z-index: 1000;
}

.logo {
  margin-top: 20px;
  margin-bottom: 30px;
  color: white;
  font-weight: bold;
}

.tagline {
  margin-top: 0px;
  color: #006600;
}

.main-toolbar {
  padding-top: 5px;
}

.header {
  background: white !important;
  color: #333 !important;
  border-bottom: 1pt solid var(--logo-color);
}

.aquarium {
  font-weight: bold;
  margin-left: 328px;
}

.aquarium a {
  color: var(--logo-color);
}

html, body {
  margin: 0;
  background: white;
  overflow: hidden;
}

.main, .main-html, .main-md {
  padding: 24px 24px 36px 36px;
  background: white;
  height: calc(100% - 84px);
  overflow: scroll;
  max-width: 900px;
}

.heading {
  font-weight: 600;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.first-heading {
  margin-top: 0px;
}

.main-row {
}

.main-frame {
  width: 100%;
}

.main-container {
  background: white;
  padding-right: 100px;
}

.copyright {
  color: #643;
  font-size: 11pt;
  margin-top: 40px;
  padding-bottom: 40px;
  padding-top: 10px;
  border-top: 1pt solid #eee;
}

::-webkit-scrollbar {
    display: none !important;
}

.logo, .tagline {
  text-align: right;
  margin-left: 145px;
}

.sidenav {
  height: calc(100% - 228px);
  overflow: scroll;
  border: none;
  text-align: right;
  margin-top: 160px;
}

.md-subheader-content {
  text-align: right !important;
}

.nav-list {
  margin: 0 10px 0 0;
  padding: 0;
}

.category-container {
  padding-right: 0px;
  text-align: right;
  margin: 20px 0 10px 100px;
  cursor: pointer;
  text-transform: uppercase;
  user-select: none;
}

.category-container:focus {
  border: none;
  text-shadow: none;
  outline: none;
}

.category-title {
  text-align: right;
}

.nav-sublist li {
  margin: 2px 0px 12px 0;
  font-size: 11pt;
}

.nav-sublist {
  margin-bottom: 30px;
  transform: scaleY(1);
  transform-origin: top;
  transition: transform 0.25s ease;
}

.nav-sublist.ng-hide {
  transition: transform 0.25s ease;
  transform: scaleY(0);
}

.nav-sublist li a {
  text-decoration: none;
  width: 100%;
  display: inline-block;
}

.inactive-content a {
  color: var(--inactive-content);
  font-weight: normal;
}

.active-content a {
  color: var(--active-content);
  font-weight: bold;
}

.content-frame {
  height: 100%;
  width: 100%;
  border: none;
}

.menu-icon {
  display: none;
  cursor: pointer;
}

.menu-icon:focus {
  border: none;
  text-shadow: none;
  outline: none;
}

.code-block {
  border-left: 8px solid #eee;
  margin-left: 16px;
  padding-left: 8px;
}

.about-row {
  margin-bottom: 16px;
}

.about-image {
  width: 300px;
  margin: 20px 40px 20px 20px;
}

.location {
  color: var(--active-content);
}

.workflow-title {
  margin-bottom: 9px;
}

.bottom-button {
  /* font-size: 24pt; */
  color: #222;
}

#toolbar-prev-next {
  padding-right: 100px;
}

@media only screen and (max-width: 960px) {
  .logo-container {
    display: none;
  }
  .main-toolbar {
    style: margin-top: 0px;
  }
  .header {
  }
  .aquarium {
    margin-left: 10px;
  }
  .main-container {
    padding-right: 0px;
  }
  .menu-icon {
    display: inline-block;
  }
  .sidenav {
    margin-top: 0px;
    height: 100%;
  }
  .about-image {
    margin: 16px;
  }
  .main {
    position: relative;
  }
  #toolbar-prev-next {
    padding-right: 0;
  }
}

@media only screen and (max-width: 600px) {
  .location {
    display: none;
  }
  .headline {
    font-size: 36px;
    line-height: 1.15;
  }
  .sub-headline {
    font-size: 24px;
    line-height: 1.15;
  }
  .headline-container {
    padding-left: 15px;
    margin-left: -8px;
  }
  .about-image {
    margin: 2px;
    margin-top: 16px;
    width: 95%;
  }
  #toolbar-prev-next {
    padding-right: 0;
  }
}

